# solidus

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  PLAN.md  PROGRESS.md  README.md  pre-commit.sh  test_pin_safety.rs
.github/workflows/: ci.yml
crates/solidus/: Cargo.toml  build.rs
crates/solidus-macros/: Cargo.toml
crates/solidus-macros/src/: lib.rs
crates/solidus-macros/tests/: init_tests.rs  method_attr_test.rs
crates/solidus/src/: context.rs  error.rs  gc.rs  lib.rs  ruby.rs
crates/solidus/src/convert/: into_value.rs  mod.rs  try_convert.rs
crates/solidus/src/method/: args.rs  examples.md  mod.rs  return_slot.rs  return_value.rs
crates/solidus/src/typed_data/: data_type.rs  marker.rs  mod.rs  traits.rs  wrap.rs
crates/solidus/src/types/: array.rs  class.rs  float.rs  hash.rs  immediate.rs  integer.rs  mod.rs  module.rs  string.rs  symbol.rs
crates/solidus/src/value/: boxed.rs  guard.rs  inner.rs  mod.rs  pinned.rs  traits.rs
crates/solidus/tests/: pin_safety_analysis_OLD_UNSAFE.rs.disabled  pin_safety_validation.rs
docs/guide/: README.md  boxvalue.md  error-handling.md  getting-started.md  methods.md  pinning.md  typed-data.md  types.md
docs/plan/: decisions.md  phase-0-bootstrap.md  phase-1-foundation.md  phase-2-tasks.md  phase-2-types.md  phase-3-methods.md  phase-3-tasks.md  phase-4-tasks.md  phase-4-typed-data.md  phase-5-polish.md  phase-6-safety-validation.md  phase-7-safety-enforcement.md  phase-8-context.md
examples/collections/: Cargo.toml  README.md  test.rb
examples/collections/src/: lib.rs
examples/hello_world/: Cargo.toml  README.md  test.rb
examples/hello_world/src/: lib.rs
examples/phase2_array/: Cargo.toml  README.md  test.rb
examples/phase2_array/src/: lib.rs
examples/phase2_class_module/: Cargo.toml  README.md  test.rb
examples/phase2_class_module/src/: lib.rs
examples/phase2_conversions/: Cargo.toml  README.md  test.rb
examples/phase2_conversions/src/: lib.rs
examples/phase2_hash/: Cargo.toml  README.md  test.rb
examples/phase2_hash/src/: lib.rs
examples/phase2_numeric_heap/: Cargo.toml  README.md  test.rb
examples/phase2_numeric_heap/src/: lib.rs
examples/phase2_string/: Cargo.toml  README.md  test.rb
examples/phase2_string/src/: lib.rs
examples/phase3_attr_macros/: .gitignore  Cargo.toml  README.md  build.rs  test.rb
examples/phase3_attr_macros/src/: lib.rs
examples/phase3_methods/: Cargo.toml  README.md  debug_test.rb  test.rb  test_global_only.rb
examples/phase3_methods/src/: lib.rs  lib_debug.rs
examples/phase4_typed_data/: Cargo.toml  README.md  test.rb
examples/phase4_typed_data/src/: lib.rs
examples/pinned_values/: .gitignore  Cargo.toml  README.md  test.rb
examples/pinned_values/src/: lib.rs
tests/ruby/: README.md  run_tests.rb
