[package]
name = "solidus-macros"
description = "Procedural macros for the solidus Ruby extension library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
solidus = { path = "../solidus" }
